# libWetHair

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
App/: CMakeLists.txt  Camera.cpp  Camera.h  ExecutableSimulation.h  ParticleSimulation.cpp  ParticleSimulation.h  RenderingUtilities.cpp  RenderingUtilities.h  StringUtilities.cpp  StringUtilities.h  TwoDSceneRenderer.cpp  TwoDSceneRenderer.h  TwoDSceneSerializer.cpp  TwoDSceneSerializer.h  TwoDSceneXMLParser.cpp  TwoDSceneXMLParser.h  TwoDimensionalDisplayController.cpp  TwoDimensionalDisplayController.h  main.cpp  openglutils.cpp  openglutils.h
assets/real_examples/: tree_structure.xml
assets/unit_tests/: box_test.xml  capsule_test.xml  capturing_test.xml  capturing_test_2.xml  cylinder_1_splash.xml  cylinder_2.xml  cylinder_2_split_only.xml  dragging_test.xml  dripping_test.xml  fictitious_test.xml  momentum_test_45.xml  momentum_test_dry.xml  momentum_test_fixed.xml  momentum_test_moving.xml  momentum_test_moving_dry.xml
cmake/: FindANTTWEAKBAR.cmake  FindEigen3.cmake  FindFreeGLUT.cmake  FindGLEW.cmake  FindNANOFLANN.cmake  FindRapidXML.cmake  FindTBB.cmake  FindTCLAP.cmake  Findrapidxml.cmake  Findstb.cmake  Findtclap.cmake  anttweakbar.cmake  eigen.cmake  glew.cmake  glfw.cmake  onetbb.cmake  rapidxml.cmake  stb.cmake  tclap.cmake
libWetHair/: AlgebraicMultigrid.h  CMakeLists.txt  CTCD.cpp  CTCD.h  Camera.cpp  Camera.h  Capsule.cpp  Capsule.h  CohesionTableGen.cpp  CompliantImplicitEuler.cpp  CompliantImplicitEuler.h  CylindricalShallowFlow.cpp  CylindricalShallowFlow.h  DefaultXMLScene.h  DragDampingForce.cpp  DragDampingForce.h  ExecutableSimulation.h  FluidDragForce.cpp  FluidDragForce.h  Force.cpp  Force.h  GeometricLevelGen.cpp  GeometricLevelGen.h  HairFlow.cpp  HairFlow.h  Icosphere.cpp  JET.h  LevelSetForce.cpp  LevelSetForce.h  LinearBendingForce.cpp  LinearBendingForce.h  LinearSpringForce.cpp  LinearSpringForce.h  LogUtilities.cpp  LogUtilities.h  MathDefs.h  MathUtilities.cpp  MathUtilities.h  ParticleSimulation.cpp  ParticleSimulation.h  (+52 more)
libWetHair/App/: Camera.cpp  Camera.h  DefaultXMLScene.h  ExecutableSimulation.h  ParticleSimulation.cpp  ParticleSimulation.h  RenderingUtilities.cpp  RenderingUtilities.h  StringUtilities.cpp  StringUtilities.h  TwoDSceneRenderer.cpp  TwoDSceneRenderer.h  TwoDSceneSerializer.cpp  TwoDSceneSerializer.h  TwoDSceneXMLParser.cpp  TwoDSceneXMLParser.h  TwoDimensionalDisplayController.cpp  TwoDimensionalDisplayController.h  YImage.cpp  YImage.h  main.cpp  openglutils.cpp  openglutils.h
libWetHair/Core/: AlgebraicMultigrid.h  CTCD.cpp  CTCD.h  Capsule.cpp  Capsule.h  CohesionTableGen.cpp  CohesionTableGen.h  CompliantImplicitEuler.cpp  CompliantImplicitEuler.h  CylindricalShallowFlow.cpp  CylindricalShallowFlow.h  DragDampingForce.cpp  DragDampingForce.h  FluidDragForce.cpp  FluidDragForce.h  Force.cpp  Force.h  GeometricLevelGen.cpp  GeometricLevelGen.h  HairFlow.cpp  HairFlow.h  Icosphere.cpp  Icosphere.h  JET.h  LevelSetForce.cpp  LevelSetForce.h  LinearBendingForce.cpp  LinearBendingForce.h  LinearSpringForce.cpp  LinearSpringForce.h  MathDefs.h  MathUtilities.cpp  MathUtilities.h  PolygonalCohesion.cpp  PolygonalCohesion.h  RoundCornerBox.h  SceneStepper.cpp  SceneStepper.h  SimpleGravityForce.cpp  SimpleGravityForce.h  (+34 more)
libWetHair/Core/DER/: Definitions.h  StrandForce.cpp  StrandForce.h  StrandParameters.h
libWetHair/Core/DER/Dependencies/: BendingProducts.h  DegreesOfFreedom.cpp  DegreesOfFreedom.h  DependencyNode.h  ElasticStrandUtils.cpp  ElasticStrandUtils.h  ElasticityParameters.h  Kappas.cpp  Kappas.h  MaterialFrames.cpp  MaterialFrames.h  ReferenceFrames.cpp  ReferenceFrames.h  Twists.cpp  Twists.h
libWetHair/Core/DER/Forces/: BendingForce.cpp  BendingForce.h  ForceAccumulator.h  StretchingForce.cpp  StretchingForce.h  TwistingForce.cpp  TwistingForce.h  ViscousOrNotViscous.h
libWetHair/Core/pcgsolver/: blas_wrapper.h  pcg_solver.h  sparse_matrix.h
libWetHair/DER/: Definitions.h  StrandForce.cpp  StrandForce.h  StrandParameters.h
libWetHair/DER/Dependencies/: BendingProducts.h  DegreesOfFreedom.cpp  DegreesOfFreedom.h  DependencyNode.h  ElasticStrandUtils.cpp  ElasticStrandUtils.h  ElasticityParameters.h  Kappas.cpp  MaterialFrames.cpp  MaterialFrames.h  ReferenceFrames.h  Twists.cpp  Twists.h
libWetHair/DER/Forces/: BendingForce.cpp  ForceAccumulator.h  StretchingForce.cpp  StretchingForce.h  TwistingForce.cpp  TwistingForce.h  ViscousOrNotViscous.h
libWetHair/pcgsolver/: blas_wrapper.h  pcg_solver.h  sparse_matrix.h
